<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:layout_marginBottom="60.0dip">
        <com.google.android.material.textview.MaterialTextView
            android:textColor="#ff000000"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@id/backBtn"
            android:background="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:src="@drawable/logo"
            app:civ_border_color="#ff000000"
            app:civ_border_width="2.0dip" />
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="18.0sp"
            android:textStyle="italic"
            android:textColor="#ff950404"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:text="@string/displayName" />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/linearlayoutbackbor"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10.0dip"
            android:isScrollContainer="true">
            <com.google.android.material.textview.MaterialTextView
                android:textSize="18.0sp"
                android:textStyle="italic"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="TEACHER REGISTRATION" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:hint="FullName?">
                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#ff04105e"
                    android:id="@+id/tname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:hint="Contact Number?">
                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#ff04105e"
                    android:id="@id/tcontact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Email Address?">
                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#ff04105e"
                    android:id="@id/temail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:gravity="center_horizontal"
                    android:entries="@array/setQual"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tqualification"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Qualification?"
                    android:prompt="@string/selQual"
                    android:spinnerMode="dialog" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:gravity="center_horizontal"
                    android:entries="@array/setStream"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tdepartment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Qualification?"
                    android:prompt="@string/selStream"
                    android:spinnerMode="dialog" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <androidx.appcompat.widget.AppCompatSpinner android:gravity="center_horizontal" android:entries="@array/setSubs" android:layout_gravity="center_horizontal" android:id="@+id/tsubject" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Qualification?" android:prompt="@string/selSub" android:spinnerMode="dialog" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="PAN/ADHAAR Number?">
                <com.google.android.material.textfield.TextInputEditText android:textColor="#ff04105e" android:id="@+id/tpanadhaar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:gravity="center_horizontal"
                    android:entries="@array/appInfo"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/appInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Qualification?"
                    android:prompt="@string/AppInfo"
                    android:spinnerMode="dialog" />
            </com.google.android.material.textfield.TextInputLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:id="@+id/timage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp" />
            <com.google.android.material.button.MaterialButton
                android:textSize="15.0sp"
                android:id="@+id/profileImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Choose Profile Image"
                android:drawableLeft="@drawable/picadd"
                style="?materialButtonStyle" />
            <com.google.android.material.button.MaterialButton
                android:textSize="15dp"
                android:id="@+id/createaccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Create account"
                android:drawableLeft="@drawable/createsaccount"
                style="?materialButtonStyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>